-posts -$usr header -fixed bandcamp link -move .invisible-ink back to style.css -include screenshot in website post

--- a/static/css/fonts.css
+++ b/static/css/fonts.css
@@ -5,6 +5,4 @@ code {
   font-family: "Space Mono", "Lucida Console", Monaco, monospace;
   font-size: 85%;
 }
-.invisible-ink {
-  color: rgba(255,255,255,0) !important;
-}
+
